--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 <p class="banner-dis">It is a long established fact that a reader will be distracted by the readable
                     <br>
                     content of a page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a
-                    more-or-less normal distribution of letters.</p>
+                    more-or-less normal distribution of letters.
+                </p>
                 <button class="btn">Shop Now</button>
             </div>
             <div class="banner-img"><img src="Flower Asset/pngwing 10.png" alt=""></div>
@@ -32,22 +33,30 @@
         <div class="featured-sec">
             <div class="featured-title">
                 <h3 class="featured-head">Our Featured Flowers</h3>
-                <p class="fratured-dis ">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                <p class="fratured-dis ">It is a long established fact that a reader will be distracted by the readable
+                    <br> content of a page when looking at its layout.
+                </p>
             </div>
             <div class="featured-box">
-                <div class="box">
-                    <img src="Flower Asset/pngwing 6.png" alt="" class="box-img">
-                    <h6 class="box-title">Pink Flower Tree</h6>
+                <div>
+                    <div class="box box1">
+                        <img src="Flower Asset/pngwing 6.png" alt="" class="box-img">
+                    </div>
+                    <h4 class="box-title">Pink Flower Tree</h4>
                 </div>
-                <div class="box">
-                    <img src="Flower Asset/pngwing 5.png" alt="" class="box-img">
-                    <h6 class="box-title">Pink Flower Tree</h6>
+                <div>
+                    <div class="box box2">
+                        <img src="Flower Asset/pngwing 5.png" alt="" class="box-img">
+                    </div>
+                    <h4 class="box-title">Pink Flower Tree</h4>
                 </div>
-                <div class="box">
+               <div>
+                <div class="box box3">
                     <img src="Flower Asset/pngwing 7.png" alt="" class="box-img">
-                    <h6 class="box-title">Pink Flower Tree</h6>
                 </div>
-                
+                <h4 class="box-title">Pink Flower Tree</h4>
+               </div>
+
             </div>
         </div>
 
