featured in section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     </header>
     <main>
+       <section>
         <div class="featured-sec">
             <div class="featured-title">
                 <h3 class="featured-head">Our Featured Flowers</h3>
@@ -50,16 +51,20 @@
                     </div>
                     <h4 class="box-title">Pink Flower Tree</h4>
                 </div>
-               <div>
-                <div class="box box3">
-                    <img src="Flower Asset/pngwing 7.png" alt="" class="box-img">
+                <div>
+                    <div class="box box3">
+                        <img src="Flower Asset/pngwing 7.png" alt="" class="box-img">
+                    </div>
+                    <h4 class="box-title">Pink Flower Tree</h4>
                 </div>
-                <h4 class="box-title">Pink Flower Tree</h4>
-               </div>
 
             </div>
         </div>
 
+       </section>
+       <section>
+        
+       </section>
     </main>
     <footer>
 
