--- a/index.html
+++ b/index.html
@@ -30,41 +30,51 @@
 
     </header>
     <main>
-       <section>
-        <div class="featured-sec">
-            <div class="featured-title">
-                <h3 class="featured-head">Our Featured Flowers</h3>
-                <p class="fratured-dis ">It is a long established fact that a reader will be distracted by the readable
-                    <br> content of a page when looking at its layout.
-                </p>
-            </div>
-            <div class="featured-box">
-                <div>
-                    <div class="box box1">
-                        <img src="Flower Asset/pngwing 6.png" alt="" class="box-img">
-                    </div>
-                    <h4 class="box-title">Pink Flower Tree</h4>
+        <section>
+            <div class="featured-sec">
+                <div class="featured-title">
+                    <h3 class="featured-head">Our Featured Flowers</h3>
+                    <p class="fratured-dis ">It is a long established fact that a reader will be distracted by the
+                        readable
+                        <br> content of a page when looking at its layout.
+                    </p>
                 </div>
-                <div>
-                    <div class="box box2">
-                        <img src="Flower Asset/pngwing 5.png" alt="" class="box-img">
+                <div class="featured-box">
+                    <div>
+                        <div class="box box1">
+                            <img src="Flower Asset/pngwing 6.png" alt="" class="box-img">
+                        </div>
+                        <h4 class="box-title">Pink Flower Tree</h4>
                     </div>
-                    <h4 class="box-title">Pink Flower Tree</h4>
-                </div>
-                <div>
-                    <div class="box box3">
-                        <img src="Flower Asset/pngwing 7.png" alt="" class="box-img">
+                    <div>
+                        <div class="box box2">
+                            <img src="Flower Asset/pngwing 5.png" alt="" class="box-img">
+                        </div>
+                        <h4 class="box-title">Pink Flower Tree</h4>
                     </div>
-                    <h4 class="box-title">Pink Flower Tree</h4>
-                </div>
+                    <div>
+                        <div class="box box3">
+                            <img src="Flower Asset/pngwing 7.png" alt="" class="box-img">
+                        </div>
+                        <h4 class="box-title">Pink Flower Tree</h4>
+                    </div>
 
+                </div>
             </div>
-        </div>
 
-       </section>
-       <section>
-        
-       </section>
+        </section>
+        <section id="hot-deal-id">
+            <div class="hot-deal-section">
+                <div class="hot-deals">
+                    <h3 class="deal-title">Hot Deal ! Sale Up To 25%<samp>Off</samp></h3>
+                    <p class="deal-dis">It is a long established fact that a reader will be distracted by the readable
+                        <br> content of a page when looking at its layout.</p>
+                    <button class="btn">Sign Up</button>
+                </div>
+                <img class="hot-deal-img" src="Flower Asset/pngwing 8.png" alt="">
+            </div>
+
+        </section>
     </main>
     <footer>
 
