--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
             </div>
 
         </section>
+        <section>
+            <div class="insta">
+                <h3 class="insta-title deal-title">Instagram</h3>
+                <p class="insta-dis deal-dis">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                <div class="insta-box">
+                    <img src="Flower Asset/Flower 01.png" alt="" class="insta-img">
+                    <img src="Flower Asset/Rectangle 4.png" alt="" class="insta-img">
+                    <img src="Flower Asset/Rectangle 5.png" alt="" class="insta-img">
+                    <img src="Flower Asset/Rectangle 6.png" alt="" class="insta-img">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
