--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                 <div class="hot-deals">
                     <h3 class="deal-title">Hot Deal ! Sale Up To 25%<samp>Off</samp></h3>
                     <p class="deal-dis">It is a long established fact that a reader will be distracted by the readable
-                        <br> content of a page when looking at its layout.</p>
+                        <br> content of a page when looking at its layout.
+                    </p>
                     <button class="btn">Sign Up</button>
                 </div>
                 <img class="hot-deal-img" src="Flower Asset/pngwing 8.png" alt="">
@@ -78,7 +79,8 @@
         <section>
             <div class="insta">
                 <h3 class="insta-title deal-title">Instagram</h3>
-                <p class="insta-dis deal-dis">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                <p class="insta-dis deal-dis">It is a long established fact that a reader will be distracted by the
+                    readable <br> content of a page when looking at its layout.</p>
                 <div class="insta-box">
                     <img src="Flower Asset/Flower 01.png" alt="" class="insta-img">
                     <img src="Flower Asset/Rectangle 4.png" alt="" class="insta-img">
@@ -87,8 +89,23 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="latest-deals">
+                <div>
+                    <h3 class="deal-title">Get The Latest Deals</h3>
+                    <p class="deal-dis">$30 coupon for first shopping</p>
+                    <div class="input-emai">
+                        <input type="email" name="email" id="email" placeholder="Enter your email here....">
+                        <input class="btn" type="submit" value="Subscribe">
+                    </div>
+                </div>
+        </section>
+
     </main>
     <footer>
+        <h3 class="deal-title"><samp>Flower</samp>Shop</h3>
+        <p class="deal-dis">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+        <small>&copy;2020-2023, FlowerShop.com. All rights reserved. </small>
 
     </footer>
 </body>
