--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 
     </main>
     <footer>
-        <h3 class="deal-title"><samp>Flower</samp>Shop</h3>
-        <p class="deal-dis">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
-        <small>&copy;2020-2023, FlowerShop.com. All rights reserved. </small>
+        <h3 class="footer-titel"><samp>Flower</samp>Shop</h3>
+        <p class="footer-dis" >It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+        <small >&copy;2020-2023, FlowerShop.com. All rights reserved. </small>
 
     </footer>
 </body>
