--- a/index.html
+++ b/index.html
@@ -63,6 +63,25 @@
             </div>
 
         </section>
+        <section>
+            <div class="insta">
+                <h3 class="insta-title deal-title">Occasion</h3>
+                <p class="insta-dis deal-dis">It is a long established fact that a reader will be distracted by the
+                    readable <br> content of a page when looking at its layout.</p>
+                <div class="occ-box">
+                    <img src="Flower Asset/birthday.png" alt="" class="occ-img">
+                    <img src="Flower Asset/anniversary.png" alt="" class="occ-img">
+                    <img src="Flower Asset/wedding.png" alt="" class="occ-img">
+                    <img src="Flower Asset/sympathy.png" alt="" class="occ-img">
+                </div>
+                <div class="occ-dis">
+                    <h5 class="occ-title">Birthday</h5>
+                    <h5 class="occ-title">Anniversary</h5>
+                    <h5 class="occ-title">Wedding</h5>
+                    <h5 class="occ-title">Sympathy</h5>
+                </div>
+            </div>
+        </section>
         <section id="hot-deal-id">
             <div class="hot-deal-section">
                 <div class="hot-deals">
@@ -104,8 +123,9 @@
     </main>
     <footer>
         <h3 class="footer-titel"><samp>Flower</samp>Shop</h3>
-        <p class="footer-dis" >It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
-        <small >&copy;2020-2023, FlowerShop.com. All rights reserved. </small>
+        <p class="footer-dis">It is a long established fact that a reader will be distracted by the readable <br>
+            content of a page when looking at its layout.</p>
+        <small>&copy;2020-2023, FlowerShop.com. All rights reserved. </small>
 
     </footer>
 </body>
